Bug 867641 - Find bar covers text
UltraBlame original commit: 482b8c3e91f76e3ba38706b7c42eb75855355f1a

--- a/browser/metro/theme/browser.css
+++ b/browser/metro/theme/browser.css
@@ -4035,6 +4035,33 @@ out
 ;
 }
 #
+browsers
+browser
+{
+transition
+:
+padding
+-
+bottom
+metro_animation_duration
+metro_animation_easing
+;
+}
+#
+browsers
+[
+findbar
+]
+browser
+{
+padding
+-
+bottom
+:
+findbar_height
+;
+}
+#
 panel
 -
 container
